@@ -1,6 +1,11 @@
 2016-07-07  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2016-06-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/71705
+	* gfortran.dg/gomp/pr71705.f90: New test.
+
 	2016-06-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/71626
